Fixed popup flicker

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -103,6 +103,7 @@ ul {
 .mapboxgl-popup-content {
   padding: 0 !important;
   font-size: var(--font-size-body);
+  pointer-events: none !important;
 }
 
 .noTip .mapboxgl-popup-tip {
